--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,15 @@
-.App {
+.container {
+  width:100vw;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container , nav{
+  font-size:30px;
+  color:red;
+  font-weight:bold;
+  font-style: italic;
 }
+h1{
+  font-weight: bolder;
+  color:rgba(31, 39, 77, 0.431);
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
